# terragrunt-import-from-plan

./: .cursorrules  .env  .gitignore  .llvm-cov  Cargo.toml  Claud.MD  README.md  STACK_OF_TASKS.md  TESTING.md  action.yml  entrypoint.sh  justfile
.github/release-notes/: v1.0.0-test.md  v1.0.0.md
.github/workflows/: docs.yml  release.yml  test.yml
docs/: AGENTS.md  REFACTORING_ANALYSIS.md  STACK_OF_TASKS.md  approach.md
docs/future/: TECHNICAL_SPEC.md  brochure.md
envs/directory/simulator/: terragrunt.hcl
envs/simulator/dev/: variables.tf
simulator/aws/: main.tf  providers.tf  variables.tf
simulator/azure/: main.tf  outputs.tf  plan.tfplan  providers.tf  variables.tf
simulator/gcp/: main.tf  outputs.tf  providers.tf  scaffold_modules.sh  variables.tf
simulator/modules/artifact_registry/: locals.tf  outputs.tf
simulator/modules/bigquery/: outputs.tf  variables.tf
simulator/modules/cloud_functions/: main.tf  variables.tf
simulator/modules/cloud_run/: locals.tf  main.tf  variables.tf
simulator/modules/cloud_sql/: locals.tf  main.tf
simulator/modules/composer/: locals.tf  outputs.tf
simulator/modules/dataproc/: locals.tf
simulator/modules/enable_apis/: locals.tf  outputs.tf
src/: app.rs  importer.rs  lib.rs  main.rs  plan.rs  reporting.rs  schema.rs  utils.rs
src/commands/: builder.rs  executor.rs  mod.rs
src/schema/: manager.rs  metadata.rs
src/scoring/: mod.rs  strategies.rs  traits.rs
test/: entrypoint_test.sh
tests/: integration_tests.rs  schema_integration_tests.rs
tests/fixtures/: modules.json  out.json
(+126 files in other folders)
